INCLUDE(../../../include/config.txt)

SET(LIBNAME utf8)
SET(LIBRARY_OUTPUT_PATH ../../../lib/)


SET(CC " ${MYCC}")
SET(RANLIB " ${MYRANLIB}")
SET(AR " ${MYAR}")
SET(ARFLAGS cru)

SET(INCLUDES ${INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR}/.)

SET(LDFLAGS )
SET(SRCS conv.c)
#SET(OBJECTS " ${SOURCES:.c=.o}")
#SET(LIBRARY libutf8.a)
SET(CFLAGS "-Wall -D_GNU_SOURCE=1 -D_FILE_OFFSET_BITS=64 -static -g -O2 -std=c99 -c")


INCLUDE_DIRECTORIES(${INCLUDES})
ADD_DEFINITIONS(${CFLAGS})
ADD_LIBRARY(${LIBNAME} ${SRCS})
string(REGEX REPLACE  ";" " " APCFG_DVR  ${APCFG_DVR})
string(REGEX REPLACE  ";" " " CHIP_MODEL_DEFS ${CHIP_MODEL_DEFS})
string(REGEX REPLACE  ";" " " APCFG_DEFS ${APCFG_DEFS})
#string(REGEX REPLACE  ";" " " BUILD_OPTIONS ${BUILD_OPTIONS})
string(REGEX REPLACE  ";" " " DEFINES ${DEFINES})
string(REGEX REPLACE  ";" " " APCFG_FLAGS ${APCFG_FLAGS})
